# build-iso

./: .frlog  .gitignore  .gitmodules  AUTHORS  ChangeLog  Makefile  Makefile.am  NEWS  README  Release.template  configure.ac  mk.conf.in  setup-build-env  setup-pkg-build
d-i/: sources.list.udeb.local  vyatta_early_command  vyatta_event_ttyS0  vyatta_gtkrc  vyatta_late_command  vyatta_partman_recipe  vyatta_preseed.cfg
debian/: changelog
livecd/: .gitignore  init.patch  isolinux.cfg  mk.livecd  mk.livecd.conf.in  mk.livecd.functions  version  vyatta.lss
livecd/binary_local-includes/install/: run-early-commands  run-late-commands
livecd/binary_local-includes/install/early-commands/: 00-config
livecd/binary_local-includes/install/late-commands/: 10-target  11-update-grub
livecd/binary_local-includes/isolinux/: f2.txt  f3.txt  f4.txt  f5.txt
livecd/chroot_local-hooks/: 00-mk_buildid  01-interfaces  01-setrootpw  02-issue  03-root_bash_completion  04-locale  05-event_tty  06-xen  07-apt  07-autorm  08-nonpersistence  08-sysconf  09-live  10-unmountfs  11-busybox
livecd/chroot_local-includes/etc/apt/: preferences
livecd/chroot_local-includes/usr/share/initramfs-tools/scripts/live-bottom/: 01vyatta_exposedroot  50vyatta
livecd/config.vyatta/: README  vbuild.conf
livecd/config.vyatta/binary_local-hooks/: 00-manifest
livecd/config.vyatta/binary_local-includes/isolinux/: boot.txt  f1.txt  f10.txt  f2.txt  f3.txt  f5.txt  f6.txt  f8.txt  f9.txt
livecd/config.vyatta/binary_local-includes/isolinux/data/: vyatta.rle
livecd/config.vyatta/chroot_apt/: preferences
livecd/config.vyatta/chroot_local-hooks/: 02-issue  03-root_bash_completion  08-sysconf  11-busybox  12-initrd  14-fuse
livecd/config.vyatta/chroot_local-includes/etc/: live.conf
livecd/config.vyatta/chroot_local-includes/usr/share/initramfs-tools/scripts/live-bottom/: 50vyatta
livecd/config.vyatta/chroot_local-packageslists/: vyatta-extra  vyatta-extra.list  vyatta-full  vyatta-full.list  vyatta-kernel.486-vyatta  vyatta-kernel.586-vyatta  vyatta-kernel.586-vyatta-virt  vyatta-kernel.586-vyos  vyatta-kernel.586-vyos-virt  vyatta-kernel.amd64-vyatta  vyatta-kernel.amd64-vyatta-virt  vyatta-kernel.amd64-vyos  vyatta-kernel.vyatta-virt  vyos-non-xen.list
livecd/config.vyatta/chroot_local-patches/: 00-initramfs
livecd/config.vyatta/chroot_sources/: release.vyatta.chroot.gpg  vyatta-testing.chroot  vyatta.chroot  vyatta.chroot.gpg
livecd/d-i/: full-upgrade  preseed.cfg
livecd/d-i/isolinux/: boot.txt  f1.txt  f10.txt  f2.txt  f3.txt  f8.txt  f9.txt  isolinux.cfg  vyatta.lss
livecd/deb_lists/: default-pkglist  etch-pkglist
livecd/deb_sources/: etch-backport.bootstrap  etch-backport.bootstrap.gpg  etch-vyatta.bootstrap  etch-vyatta.bootstrap.gpg  gutsy-vyatta.bootstrap  lenny-vyatta.bootstrap  xen-vyatta.bootstrap
livecd/hooks_binary/: default-hooks
livecd/initramfs-tools/: init
livecd/initramfs-tools/scripts/: live
livecd/initramfs-tools/scripts/live-bottom/: 13swap
livecd/lh_config/: default-config  etch-config  gutsy-config  lenny-config
livecd/live-bottom/: 11chuserpw  48homeroot  49tmpfsconfig  50vyatta
livecd/live.conf/: etch  gutsy  lenny
livecd/live_config/: etch-config  gutsy-config  lenny-config
livecd/local-bottom/: 01tmpfsconfig
livecd/patches/: gutsy-umountfs-0.patch  lenny-umountfs-0.patch  live-0.patch
livecd/templates/: boot.txt.template  config.boot.default  isolinux.cfg  version
livecd/templates/community/: config.boot.default  version
livecd/templates/grub/: default-union-grub-template  menu.lst
livecd/templates/supported/: config.boot.default  version
livecd/tools/: buildid  save-package-report
tools/: archive-report  buildid  check-files-copyright  check-pkgs-status  clone-full  create-version-package  deb-archive  debhelper_udeb_gencontrol.patch  extract-templates  fetch-with-status  find-string-index.pl  fresh-branch  install-submodule-build-deps  latestdeb  lh_binary  lh_binary_debian-installer  license-template.GPLv2  merge-branch  pkg-clone  pkg-release  pkg-upload  setup-vyos-build-env  setup-vyos-build-pkg  show-unreleased  submod-clean  submod-git  submod-inc-version  submod-mk  write-templates
